Revision history for Dist-Zilla-PluginBundle-CJM

0.03   NOT
	- Includes a new version of Template_strict.patch that
	  supports scalar references properly

	Dist::Zilla::Plugin::ArchiveRelease
	  - Shortened log message

	Dist::Zilla::Plugin::CustomModuleBuild
	  - New plugin

0.02   March 7, 2010
	- Added POD tests
	- Use the plugin's log method so the plugin name appears in the log

	Dist::Zilla::Plugin::ArchiveRelease
	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - New plugins

	Dist::Zilla::Plugin::PodLoom
	  - Define abstract, module, & version only if they
	    could be determined

	Dist::Zilla::Plugin::TemplateCJM
	  - Also process comments that start at beginning of line

0.01   October 11, 2009
	- Initial release includes:
	    Dist::Zilla::Plugin::PodLoom
	    Dist::Zilla::Plugin::TemplateCJM
	    Dist::Zilla::Plugin::VersionFromModule
	    Dist::Zilla::Role::ModuleInfo