@@ -10,6 +10,10 @@ Revision history for Dist-Zilla-PluginBundle-CJM
 	Dist::Zilla::Plugin::CustomModuleBuild
 	  - New plugin
 
+	Dist::Zilla::Plugin::TemplateCJM
+	  - Is now an InstallTool instead of a FileMunger, because
+	    prerequisites have not been calculated at FileMunger time
+
 0.02   March 7, 2010
 	- Added POD tests
 	- Use the plugin's log method so the plugin name appears in the log
